--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -37,7 +37,7 @@
     <div class="mw8 center tl bt b--lightest-blue pt4">
       <div class="cf mt0 mb5 tc">
         <div class="w-100-l avenir">
-          <h1 class="f1 b white">How it works</h1>
+          <h1 class="f2 f1-m f1-l b white">How it works</h1>
         </div>
         <div class="cf db w-80 w-50-l center">
           <div class="fl w-10 w-20-m w-30-l center tr circle-whit mt2">
@@ -46,17 +46,17 @@
             <span>3</span>
             <span>4</span>
           </div>
-          <div class="fl w-30 w-80-m w-70-l numberlist tl center">
+          <div class="fl w-90 w-80-m w-70-l numberlist tl center">
             <ol class="avenir">
-              <li class="f4 fw5 avenir">Register</li>
-              <li class="f4 fw5 avenir">Get a daily activity on you your inbox</li>
-              <li class="f4 fw5 avenir">Complete the activty and check-in</li>
-              <li class="f4 fw5 avenir">Celebrate!</li>
+              <li class="f5 f4-m f4-l fw5 avenir">Register</li>
+              <li class="f5 f4-m f4-l fw5 avenir">Get a daily activity on you your inbox</li>
+              <li class="f5 f4-m f4-l fw5 avenir">Complete the activty and check-in</li>
+              <li class="f5 f4-m f4-l fw5 avenir">Celebrate!</li>
             </ol>
           </div>
           <div class="cf db">
-            <div class="w-90-m w-100-ns w-60-l tl  center">
-              <p class="lh-copy-l f4 fw5 white w-100-l ml4 pl3 avenir"> Discover opportunities to exercise in your daily
+            <div class="w-90-m w-100 w-60-l tl  center">
+              <p class="lh-copy-l f5 f4-m f4-l fw5 white w-100-l ml4 pl3 avenir"> Discover opportunities to exercise in your daily
                 routine.
               </p>
             </div>
@@ -69,7 +69,7 @@
     <div class="mw8 center tl">
       <div class="cf mt0 mb5 tc  pb4">
         <div class="w-100-l">
-          <h1 class="f1 b black avenir">Join now for free</h1>
+          <h1 class="f3 f1-m f1-l black avenir">Join now for free</h1>
         </div>
         <div class="w-90-m w-100-ns w-50-l  center">
           <p class="lh-copy-l black f5 fw5 avenir"> Now sweat required - no pressure - no speacial equipment fun
@@ -88,7 +88,7 @@
     <div class="dt w-100 mw8 ph3 ph3-m ph3-l pb5 center tl">
       <div class="cf pt5">
         <article class="pv2 fl w-100 w-60-l w-60-m pr0 pr2-l">
-          <h1 class="f1 f1-ns w-90 w-60-l w-80-m b mb1 avenir navy">What people are saying</h1></article>
+          <h1 class="f2 f1-m f1-l w-90 w-60-l w-80-m b mb1 avenir navy">What people are saying</h1></article>
       </div>
       <div class="cf mt4">
         <div class="w-100 w-50-l w-50-m fl">
@@ -208,10 +208,10 @@
       </div>
     </div>
   </section>
-  <footer class="cf w-100 pa5 ph6-ns bg-navy white" id="feafooter">
+  <footer class="cf w-100 pa1 pa1-m pa5-l ph6-ns bg-navy white" id="feafooter">
     <div class="dt w-100 mw8 ph3 ph4-m ph4-l tl center">
       <div class="cf">
-        <div class="fl w-50 avenir">
+        <div class="fl w-100 w-50-l w-50-m avenir">
           <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns white">
             Reach us
           </h3>
@@ -221,7 +221,7 @@
           </h3>
           <p class="f6 fw5 white mt1">(link) <a href="https://www.facebook.com/getwalkers/" class="no-underline underline-hover white">[https://www.facebook.com/getwalkers/]</a></p>
         </div>
-        <div class="fl w-50">
+        <div class="fl w-100 w-50-l w-50-m">
           <h3 class="f5 fw6 w-90-l ma0-ns pa0-ns white">Active Pathways is an initiative of:
             SMARTplayds Limited</h3>
           <p class="f6 fw5 white mt2">Collaborate Works - Steward House <router-link tag="a" :to="{ name: 'landingpage' }" class="underline white">14 Commercial Way</router-link></p>
