--- a/service-web/src/components/header/header.html
+++ b/service-web/src/components/header/header.html
@@ -31,7 +31,7 @@
       </nav>
       <section class="hero ph3 w-40">
         <div class="db fr w-40-l w-60-m w-100 center black ph3 ph0-ns absolute bottom-0 right-0 ">
-          <div class="bg-white black pv2 ph3 ph6-l ph3-m br--left-l br--left-m br--top br4 tl">
+          <div class="bg-white welcome-bg black pv2 ph3 ph6-l ph3-m br--left-l br--left-m br--top br4 tl">
             <h1 class="f1 f1-ns black mb0 mt2-m">Welcome </h1>
             <p class="lh-copy-l f5 fw5 black mt0 avenir"> Take your first steps<br> to become more physically active
             </p>
