issue-16 fix/amend copy on landing page

--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -6,7 +6,7 @@
           <h1 class="f3 f1-l f1-m navy w-70-l b tr fr mt0-ns mb2 right--1 right--2-l relative">Feel more
             confident </h1>
           <a href="/"
-             class="f6 f5-l f5-m fw5 fl w-100  tr pr0 pr5-l pr5-m mt1"> Read More</a>
+             class="f6 f5-l f5-m fw5 fl w-100  tr pr0 pr5-l pr5-m mt1">Be more aware of what you can do. Add movement progressively into your life.</a>
         </div>
         <div class="w-50 fl bg-light-gray h4 h5-l h5-m stretching-img-small">
         </div>
@@ -18,7 +18,7 @@
           <h1 class="f3 f1-l f1-m navy w-90-l tl b fl mt0-ns mb2 left--1 left--2-l relative">Increase your
             wellbeing </h1>
           <a href="/"
-             class="f6 f5-l f5-m  fw5 fl w-100  tl pr0 pr4-l pr4-m ml4 pl3 mt2"> Read More</a>
+             class="f6 f5-l f5-m  fw5 fl w-100  tl pr0 pr4-l pr4-m ml4 pl3 mt2">Moving more will help you feel more energised, happier and healthier.</a>
         </div>
       </div>
       <div class="cf db mv5 avenir">
@@ -26,7 +26,7 @@
           <h1 class="f3 f1-l f1-m navy w-70 b w-60-l w-70-m tr fr mt0-ns mb2 right--1 right--2-l relative">Change your
             life </h1>
           <a href="/"
-             class="f6 f5-l f5-m fw5 fl w-100  tr pr0 pr4-l pr4-m mt3"> Read More</a>
+             class="f6 f5-l f5-m fw5 fl w-100  tr pr0 pr4-l pr4-m mt3">A small step can have an immediate impact, or make a significant difference in your life</a>
         </div>
         <div class="w-50 fl bg-light-gray h4 h5-l h5-m stretching-img-small">
         </div>
@@ -48,10 +48,10 @@
           </div>
           <div class="fl w-90 w-80-m w-70-l numberlist tl center">
             <ol class="avenir">
-              <li class="f5 f4-m f4-l fw5 avenir">Register</li>
-              <li class="f5 f4-m f4-l fw5 avenir">Get a daily activity on you your inbox</li>
-              <li class="f5 f4-m f4-l fw5 avenir">Complete the activty and check-in</li>
-              <li class="f5 f4-m f4-l fw5 avenir">Celebrate!</li>
+              <li class="f5 f4-m f4-l fw5 avenir">Create an account</li>
+              <li class="f5 f4-m f4-l fw5 avenir">Receive a daily challenge on you your inbox</li>
+              <li class="f5 f4-m f4-l fw5 avenir">Complete the challenge</li>
+              <li class="f5 f4-m f4-l fw5 avenir">Check-in, reflect and celebrate!</li>
             </ol>
           </div>
           <div class="cf db">
@@ -72,11 +72,8 @@
           <h1 class="f3 f1-m f1-l black avenir">Join now for free</h1>
         </div>
         <div class="w-90-m w-100-ns w-50-l  center">
-          <p class="lh-copy-l black f5 fw5 avenir"> Now sweat required - no pressure - no speacial equipment fun
-            guaranteed -
-            join
-            more
-            than 2000 participants</p>
+          <p class="lh-copy-l black f5 fw5 avenir"> No sweat required - No pressure - No special equipment - Fun
+            guaranteed - Join more than 2000 participants!</p>
         </div>
         <a class="f5 link b dim br-pill ph4 mb2 mt3 dib white blue-dark-color pt2 pb2 lh-copy avenir" href="/">
           Get started now
