--- a/service-web/src/components/login/signIn/signIn.html
+++ b/service-web/src/components/login/signIn/signIn.html
@@ -12,7 +12,7 @@
               <div class="w-100 cf"><p class="f6 f5-ns lh-copy measure tl navy avenir">Lorem ipsum dolor sit amet,
                 consectetur adipiscing.</p></div>
               <form class="measure center">
-                <fieldset id="sign_up" class="ba b--transparent ph0 mh0 pb0">
+                <fieldset class="ba b--transparent ph0 mh0 pb0">
                   <div class="mt3">
                     <input class="pa2 input-reset bb b--black-20 bg-transparent br-0 bl-0 bt-0 w-100 navy" type="email"
                            name="email-address"
