--- a/service-web/src/components/header/header.css
+++ b/service-web/src/components/header/header.css
@@ -34,7 +34,7 @@
 }
 
 .header-baner {
-  background-image: url(../../assets/images/Stretching_V2.png);
+  background-image: url(../../assets/images/lp_walk_in_the_park_hero.jpg);
   background-position: center;
   background-size: cover;
   width: 100%;
