--- a/service-web/src/components/login/signUp/signUp.css
+++ b/service-web/src/components/login/signUp/signUp.css
@@ -1,8 +1,9 @@
-.modal-frame {
-  background-color: rgba(0, 0, 0, 0.62);
-}
-
 .is-danger {
   color: red;
-  font-size: small;
+  font-size: 10px;
+  font-weight: 500;
+}
+
+.min-height-560 {
+  min-height: 560px;
 }
