--- a/service-web/src/views/LandingPage/landing-page.css
+++ b/service-web/src/views/LandingPage/landing-page.css
@@ -58,5 +58,5 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url(../../assets/images/Stretching_V1.png);
+  /*background-image: url(../../assets/images/Stretching_V1.png);*/
 }
