--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -6,19 +6,23 @@
           <h1 class="f3 f1-l f1-m navy w-70-l b tr fr mt0-ns mb2 right--1 right--2-l relative">Feel more
             confident </h1>
           <a href="/"
-             class="f6 f5-l f5-m fw5 fl w-100  tr pr0 pr5-l pr5-m mt1">Be more aware of what you can do. Add movement progressively into your life.</a>
+             class="f6 f5-l f5-m fw5 fl w-100  tr pr0 pr5-l pr5-m mt1">Be more aware of what you can do. Add movement
+            progressively into your life.</a>
         </div>
-        <div class="w-50 fl bg-light-gray h4 h5-l h5-m stretching-img-small">
+        <div class="w-50 fl bg-light-gray h4 h5-l h5-m stretching-img-small"
+             style=" background-image: url('http://res.cloudinary.com/drj4dg734/image/upload/v1520963115/Activepathways/assets/lp_feel_confident.png');">
         </div>
       </div>
       <div class="cf db mv5 avenir">
-        <div class="w-50 fl h4 h5-l h5-m stretching-img-small">
+        <div class="w-50 fl h4 h5-l h5-m stretching-img-small"
+             style=" background-image: url('http://res.cloudinary.com/drj4dg734/image/upload/v1520963115/Activepathways/assets/lp_dancer_increase_wellbeing.jpg');">
         </div>
         <div class="w-50 fl pt5-l pt5-m pt2">
           <h1 class="f3 f1-l f1-m navy w-90-l tl b fl mt0-ns mb2 left--1 left--2-l relative">Increase your
             wellbeing </h1>
           <a href="/"
-             class="f6 f5-l f5-m  fw5 fl w-100  tl pr0 pr4-l pr4-m ml4 pl3 mt2">Moving more will help you feel more energised, happier and healthier.</a>
+             class="f6 f5-l f5-m  fw5 fl w-100  tl pr0 pr4-l pr4-m ml4 pl3 mt2">Moving more will help you feel more
+            energised, happier and healthier.</a>
         </div>
       </div>
       <div class="cf db mv5 avenir">
@@ -26,9 +30,11 @@
           <h1 class="f3 f1-l f1-m navy w-70 b w-60-l w-70-m tr fr mt0-ns mb2 right--1 right--2-l relative">Change your
             life </h1>
           <a href="/"
-             class="f6 f5-l f5-m fw5 fl w-100  tr pr0 pr4-l pr4-m mt3">A small step can have an immediate impact, or make a significant difference in your life</a>
+             class="f6 f5-l f5-m fw5 fl w-100  tr pr0 pr4-l pr4-m mt3">A small step can have an immediate impact, or
+            make a significant difference in your life</a>
         </div>
-        <div class="w-50 fl bg-light-gray h4 h5-l h5-m stretching-img-small">
+        <div class="w-50 fl bg-light-gray h4 h5-l h5-m stretching-img-small"
+             style=" background-image: url('http://res.cloudinary.com/drj4dg734/image/upload/v1520963115/Activepathways/assets/lp_walk_with_friend_change_life.jpg');">
         </div>
       </div>
     </div>
@@ -56,7 +62,8 @@
           </div>
           <div class="cf db">
             <div class="w-90-m w-100 w-60-l tl  center">
-              <p class="lh-copy-l f5 f4-m f4-l fw5 white w-100-l ml4 pl3 avenir"> Discover opportunities to exercise in your daily
+              <p class="lh-copy-l f5 f4-m f4-l fw5 white w-100-l ml4 pl3 avenir"> Discover opportunities to exercise in
+                your daily
                 routine.
               </p>
             </div>
@@ -216,12 +223,16 @@
           <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns white">
             Join our community on Facebook
           </h3>
-          <p class="f6 fw5 white mt1">(link) <a href="https://www.facebook.com/getwalkers/" class="no-underline underline-hover white">[https://www.facebook.com/getwalkers/]</a></p>
+          <p class="f6 fw5 white mt1">(link) <a href="https://www.facebook.com/getwalkers/"
+                                                class="no-underline underline-hover white">[https://www.facebook.com/getwalkers/]</a>
+          </p>
         </div>
         <div class="fl w-100 w-50-l w-50-m">
           <h3 class="f5 fw6 w-90-l ma0-ns pa0-ns white">Active Pathways is an initiative of:
             SMARTplayds Limited</h3>
-          <p class="f6 fw5 white mt2">Collaborate Works - Steward House <router-link tag="a" :to="{ name: 'landingpage' }" class="underline white">14 Commercial Way</router-link></p>
+          <p class="f6 fw5 white mt2">Collaborate Works - Steward House
+            <router-link tag="a" :to="{ name: 'landingpage' }" class="underline white">14 Commercial Way</router-link>
+          </p>
           <p class="f6 fw5 white mt1">Woking GU21 6ET</p>
           <p class="f6 fw5 white mt1">+44 - 203 695 2189</p>
           <p class="f6 fw5 white mt1">Registered in England and Wales 9462175</p>
