--- a/service-web/src/components/login/signIn/signIn.html
+++ b/service-web/src/components/login/signIn/signIn.html
@@ -1,31 +1,31 @@
-<section class="modal-frame fixed top-0 right-0 bottom-0 left-0 z-2 w-100" :class="{'modal-active': activeStatus}" @click.prevent="closeModal($event)">
-  <section class="cf w-100 ph0 ph6-l  pt2 pt5-m pt5-l relative z-4 dt h-100">
-    <div class="dt w-100 mw7 ph3 ph3-m ph3-l center">
-      <div class="w-100 bg-white animation black br3 mb5 z-3 relative shadow-default" @click.prevent="$event.stopPropagation()">
-        <div class="w-100">
+<section class="modal-signin fade " :class="{'show': activeStatus, 'd-block': activeStatus}" @click.prevent="closeModal($event)">
+  <section class="modal-frame h-100 dt">
+    <div class="w-100 modal-dialog dtc v-mid ph2">
+      <div class="w-100  mb5 z-3 relative" @click.prevent="$event.stopPropagation()">
+        <div class="w-100 bg-white  black br3 shadow-default animation">
           <div class="cf db o-90">
             <div class="fl w-100 w-50-l w-50-m pa4 avenir">
               <div class="cf w-100">
                 <div class="w-50 fl f4 fw5 navy tl">Sign In</div>
                 <div class="w-50 fr f6 fw6 blue tr mt2" @click.prevent="openSignUp($event)">SIGN UP</div>
               </div>
-              <div class="w-100 cf"><p class="f6 f5-ns lh-copy measure tl navy avenir">Lorem ipsum dolor sit amet,
+              <div class="w-100 cf"><p class="f6 f5-ns lh-copy measure tl navy avenir mt2">Lorem ipsum dolor sit amet,
                 consectetur adipiscing.</p></div>
               <form class="measure center">
                 <fieldset class="ba b--transparent ph0 mh0 pb0">
                   <div class="mt3">
-                    <input class="pa2 input-reset bb b--black-20 bg-transparent br-0 bl-0 bt-0 w-100 navy" type="email"
+                    <input class="pv2 input-reset bb b--black-20 bg-transparent br-0 bl-0 bt-0 w-100 navy" type="email"
                            name="email-address"
                            id="email-address"
                            v-validate="'required|email'"
                            data-vv-as="email"
                            v-model="email"
                            placeholder="Username or e-mail"/>
-                    <span v-show="errors.has('email-address')" class="help is-danger">{{ errors.first('email-address') }}</span>
+                    <span v-show="errors.has('email-address')" class="help is-danger absolute left-2 mt1">{{ errors.first('email-address') }}</span>
                   </div>
                   <div class="mt4">
                     <input
-                      class=" pa2 input-reset bb b--black-20 bg-transparent br-0 bl-0 bt-0 bg-transparent w-100"
+                      class=" pv2 input-reset bb b--black-20 bg-transparent br-0 bl-0 bt-0 bg-transparent w-100"
                       type="password"
                       v-validate="'required|alpha_num'"
                       data-vv-as="password"
@@ -33,13 +33,13 @@
                       name="password"
                       id="password"
                       placeholder="Password"/>
-                    <span v-show="errors.has('password')" class="help is-danger">{{ errors.first('password') }}</span>
+                    <span v-show="errors.has('password')" class="help is-danger absolute left-2 mt1">{{ errors.first('password') }}</span>
                   </div>
                 </fieldset>
                 <div class="lh-copy pt0 avenir">
                   <a href="#0" class="f6 fw6 link dim blue db tr">FORGOT PASSWORD</a>
                 </div>
-                <div class="cf w-100 mt5">
+                <div class="cf w-100 mt4">
                   <a class="f6 link dim br-pill ph3 pv3 mb2 dib white blue-dark-color w-100" href="#0" @click.prevent="signIn($event)">LOGIN</a>
                 </div>
                 <div class="cf w-100 mt2">
